gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
# ---
# apiVersion: cilium.io/v2
# kind: CiliumLoadBalancerIPPool
# metadata:
#   name: lb-pool
# spec:
#   blocks:
#   - cidr: "172.20.250.0/24"
# ---
# apiVersion: cilium.io/v2alpha1
# kind: CiliumL2AnnouncementPolicy
# metadata:
#   name: default-l2-policy
# spec:
#   serviceSelector:
#     matchLabels:
#       app.kubernetes.io/managed-by: cilium
#   nodeSelector:
#     matchExpressions:
#       - key: node-role.kubernetes.io/control-plane
#         operator: DoesNotExist
#   interfaces:
#     - ^eth[0-9]+
#   externalIPs: true
#   loadBalancerIPs: true

# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: example-gateway
# spec:
#   gatewayClassName: cilium
#   addresses:
#   - type: IPAddress
#     value: 127.0.0.1
#   listeners:
#   - name: http
#     port: 80
#     protocol: HTTP
#     allowedRoutes:
#       namespaces:
#         from: All
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: example-route
#   namespace: kube-system
# spec:
#   parentRefs:
#   - name: example-gateway
#     namespace: default
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /
#     backendRefs:
#     - name: hubble-ui
#       port: 80
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: example-kibana
# spec:
#   parentRefs:
#   - name: example-gateway
#     namespace: default
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /
#     backendRefs:
#     - kind: Service
#       name: quickstart-kb-http
#       port: 5601
